# RISC-V-High-Performance-Simulator

./: .gitignore  .gitmodules  LICENSE  README.md
scripts/: generate-riscv-instrs-def.py
simulator/: CMakeLists.txt
simulator/executor/: executor.cpp  executor.h
simulator/functional/: func_memory.cpp  func_memory.h  funcsim.cpp  funcsim.h
simulator/functional/fetch/: fetch.cpp  fetch.h
simulator/functional/rf/: rf.cpp  rf.h
simulator/infra/: types.h  utils.h
simulator/infra/arg_parse/: arg_parser.cpp  arg_parser.h
simulator/infra/config/: config.cpp  config.h
simulator/infra/decoder/: decode_tree.cpp  decode_tree.h
simulator/kernel/: kernel.cpp  kernel.h
simulator/memory/: memory.cpp  memory.h
simulator/memory/elf/: elf_loader.cpp  elf_loader.h
simulator/risc-v/: risc-v-instructions.def  risc-v.yaml
simulator/risc-v/register/: risc-v-registers.def  riscv_register.h
simulator/top/: base_instruction.cpp  base_instruction.h  instruction_enum.h  main.cpp  simulator.cpp  simulator.h
